added latest translations

--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_fr.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_fr.properties
@@ -17,12 +17,12 @@
 OpenShiftProviderConfigView.ProviderType=Type de fournisseur
 OpenShiftProviderConfigView.ProviderName=Nom du fournisseur
 OpenShiftProviderConfigView.MasterURL=URL principale
-OpenShiftProviderConfigView.UserName=Nom d’utilisateur
+OpenShiftProviderConfigView.UserName=Nom d''utilisateur
 OpenShiftProviderConfigView.Password=Mot de passe
 
 TemplateParamsFormView.Title=Paramètres du serveur Kie
 TemplateParamsFormView.TemplateURL=URL du modèle
-TemplateParamsFormView.ImageStreamsURL=Flux d’images
+TemplateParamsFormView.ImageStreamsURL=Flux d''images
 TemplateParamsFormView.SecretsFileURL=Secrets
 TemplateParamsFormView.RuntimeName=Nom du runtime
 TemplateParamsFormView.TemplateParameters=Paramètres du modèle
@@ -32,6 +32,6 @@ TemplateParamsTableView.ParamRequiredColumn=Obligatoire
 TemplateParamsTableView.ParamValueColumn=Valeur
 TemplateParamsTableView.ParamsEmptyTableCaption=aucun paramètre
 
-TemplateParamsFormPresenter.GetTemplateFileConfigError=Une erreur s’est produite lors d’obtention du contenu du modèle depuis le serveur
-TemplateParamsFormPresenter.RequiredParamsNotCompletedMessage=*les paramètres requis n’ont pas encore été saisis
+TemplateParamsFormPresenter.GetTemplateFileConfigError=Une erreur s''est produite lors d''obtention du contenu du modèle depuis le serveur
+TemplateParamsFormPresenter.RequiredParamsNotCompletedMessage=*les paramètres requis n''ont pas encore été saisis
 TemplateParamsFormPresenter.InvalidProjectNameError=Les noms des runtimes OpenShift ne peuvent contenir que des lettres minuscules, des chiffres et des tirets. Ils ne peuvent pas commencer ni se terminer par un tiret.
