--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_es.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_es.properties
@@ -86,7 +86,7 @@ ProviderTypeView.Providers=PROVEEDORES
 ProviderTypeView.Runtimes=TIEMPOS DE EJECUCIÓN
 ProviderTypeView.Disable=Deshabilitar
 ProviderTypeView.ProviderTypeDisablePopupTitle=Deshabilitar el tipo de proveedor
-ProviderTypeView.ProviderTypeDisablePopupText=¿Está seguro de que desea deshabilitar el tipo de proveedor actual? <BR>No se tendrá acceso a los proveedores relacionados desde esta pantalla hasta que el tipo de proveedor se habilite nuevamente.
+ProviderTypeView.ProviderTypeDisablePopupText=¿Está seguro de que quiere desactivar el tipo de proveedor actual? <BR>Los proveedores relacionados no serán accesibles desde esta pantalla hasta que el tipo de proveedor sea habilitado de nuevo.
 ProviderConfigEmptyView.Title=Proveedor faltante
 ProviderConfigEmptyView.ProviderTypeNotProperlyConfiguredMessage=El tipo de proveedor no estaba configurado correctamente. No será posible agregar un proveedor
 RuntimePresenter.RuntimeStartAction=Iniciar el tiempo de ejecución
