--- a/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_fr.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_fr.properties
@@ -13,16 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-WF10ProviderConfigView.TestConnectionSuccessfulMessage=<strong>Test de connexion à la gestion réussi :</strong><BR>{0}
-WF10ProviderConfigView.TestConnectionFailMessage=<strong>Échec du test de connexion à la gestion :</strong><BR>{0}
+WF10ProviderConfigView.TestConnectionSuccessfulMessage=<strong>Test de connexion à la gestion réussi :</strong><BR>{0}
+WF10ProviderConfigView.TestConnectionFailMessage=<strong>Échec du test de connexion à la gestion: </strong><BR>{0}
 WF10ProviderConfigView.AllParamsNeedsCompletionForValidationMessage=Tous les paramètres doivent être saisis pour effectuer la validation
-WF10ProviderConfigView.TestConnectionUnExpectedErrorMessage=Une erreur s’est produite lors du test de connexion : {0}
+WF10ProviderConfigView.TestConnectionUnExpectedErrorMessage=Une erreur s''est produite lors du test de connexion : {0}
 WF10ProviderConfigView.ProviderType=Type de fournisseur
 WF10ProviderConfigView.ProviderName=Nom du fournisseur
 WF10ProviderConfigView.Host=Hôte 
 WF10ProviderConfigView.Port=Port
 WF10ProviderConfigView.ManagementPort=Port de gestion
-WF10ProviderConfigView.UserName=Nom d’utilisateur
+WF10ProviderConfigView.UserName=Nom d''utilisateur
 WF10ProviderConfigView.Password=Mot de passe
 WF10ProviderConfigView.TestConnection=TestConnection
 
