--- a/kie-wb-common-dmn/kie-wb-common-dmn-project-client/src/main/resources/org/kie/workbench/common/dmn/project/client/resources/i18n/DMNProjectClientConstants_ja.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-project-client/src/main/resources/org/kie/workbench/common/dmn/project/client/resources/i18n/DMNProjectClientConstants_ja.properties
@@ -1,5 +1,5 @@
 DMNDiagramResourceType.shortName=DMN
 DMNDiagramResourceType.description=DMN
-DMNDiagramResourceType.download=DMN としてダウンロード
+DMNDiagramResourceType.download=DMNをダウンロード
 PreviewDiagramScreenView.title=プレビュー
 
