--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
@@ -58,14 +58,14 @@ ChangesNotificationDisplayer.title=Notificación: Hay algunos cambios en su form
 NewPropertiesDisplayerViewIpml.newFormFieldsAvailable=Nuevo(s) campo(s) de formulario disponible(s):
 
 ConflictsDisplayerViewIpml.conflicts=Los siguientes campos tienen problemas que deben resolverse:
-ModelProperty.removed1=: Se ha quitado la propiedad del modelo que estaba ligada a ('{0}').
+ModelProperty.removed1=Se ha quitado la propiedad del modelo que estaba ligada a (''{0}'').
 ModelProperty.removed2=El campo no se quitará del formulario, pero se modificará la vinculación para evitar problemas. Edite las propiedades del campo y vincúlelo a una propiedad existente.
-ModelProperty.typeConflict1=: La propiedad del modelo a la que estaba vinculada ('{0}') ha cambiado el tipo a un tipo que no admite el campo del formulario.
+ModelProperty.typeConflict1=La propiedad del modelo a la que estaba vinculada (''{0}'') ha cambiado el tipo a un tipo que no admite el campo del formulario.
 ModelProperty.typeConflict2=El campo del formulario se cambiará al tipo de campo correcto. Edite las propiedades de los campos y compruebe que los ajustes sean los correctos.
 
-NestedFormsConflictHandler.nestedForm=: El campo SubForm está configurado para usar un formulario que no existe.
-NestedFormsConflictHandler.creationForm=: El campo MultipleSubForm está tratando de usar un formulario para la creación de instancias que no existe.
-NestedFormsConflictHandler.editionForm=: El campo MultipleSubForm está tratando de usar un formulario para la edición de instancias que no existe.
+NestedFormsConflictHandler.nestedForm=El campo SubForm está configurado para usar un formulario que no existe.
+NestedFormsConflictHandler.creationForm=El campo MultipleSubForm está tratando de usar un formulario para la creación de instancias que no existe.
+NestedFormsConflictHandler.editionForm=El campo MultipleSubForm está tratando de usar un formulario para la edición de instancias que no existe.
 NestedFormsConflictHandler.fix=La configuración de los campos se modificará para evitar problemas; edite el campo y seleccione el formulario correcto.
 
 showMore=Mostrar detalles
@@ -78,5 +78,5 @@ ErrorMessageDisplayerViewImpl.closeAndReview=Cierre el editor de formularios y r
 ErrorMessageDisplayerViewImpl.continue=Proceda al editor de formularios
 
 FormEditorService.shortKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador.
-FormEditorService.longKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador. <br/>Mensaje completo de error: <br/>{0}
+FormEditorService.longKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador. Mensaje de error:
 FormEditorPresenter.propertiesEditor=Propiedades del campo
