--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_es.properties
@@ -17,6 +17,6 @@
 DataObjectFormModelCreationViewImpl.SelectDataObject=Seleccione el objeto de datos desde el proyecto:
 DataObjectFormModelCreationPresenter.InvalidDataObject=No se seleccionó ningún objeto de datos
 org.kie.workbench.common.forms.data.modeller.model.DataObjectFormModel=Objeto de datos
-DataObjectFormModelHandler.shortMessage=No puede encontrarse el objeto de datos '{0}' en el proyecto.
-DataObjectFormModelHandler.fullMessage=No puede encontrarse el objeto de datos '{0}' en el proyecto. <br/>En general, esto implica que se ha quitado el objeto de datos o que hay un problema de compilación en el proyecto. <br/>Compruebe que exista el objeto de datos y abra nuevamente el formulario. Si el error persiste, consulte con el administrador. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
+DataObjectFormModelHandler.shortMessage=No puede encontrarse el objeto de datos ''{0}'' en el proyecto.
+DataObjectFormModelHandler.fullMessage=No puede encontrarse el objeto de datos ''{0}'' en el proyecto. <br/>Esto suele indicar que el objeto de datos ha sido eliminado o que hay un problema de compilación en el proyecto. <br/>Por favor, compruebe que el objeto de datos existe y abra de nuevo el formulario, si el error persiste consulte con su administrador. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
 DataObjectFormModelHandler.dataObject=Objeto de datos
