--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_fr.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-data-modeller-integration/kie-wb-common-forms-data-modeller-integration-client/src/main/resources/org/kie/workbench/common/forms/data/modeller/client/resources/i18n/DataModellerIntegrationConstants_fr.properties
@@ -14,9 +14,9 @@
 # limitations under the License.
 #
 
-DataObjectFormModelCreationViewImpl.SelectDataObject=Sélectionner l’objet de données dans le projet :
-DataObjectFormModelCreationPresenter.InvalidDataObject=Aucun objet de données n’est sélectionné
+DataObjectFormModelCreationViewImpl.SelectDataObject=Sélectionner l''objet de données dans le projet :
+DataObjectFormModelCreationPresenter.InvalidDataObject=Aucun objet de données n''est sélectionné
 org.kie.workbench.common.forms.data.modeller.model.DataObjectFormModel=Objet de données
-DataObjectFormModelHandler.shortMessage=Impossible de trouver l’objet de données ''{0}'' sur le projet.
-DataObjectFormModelHandler.fullMessage=Impossible de trouver l’objet de données ''{0}'' dans le projet. <br/>Cela signifie généralement que l’objet de données a été supprimé ou qu’il y a un problème de compilation dans le projet. <br/>Vérifiez que l’objet de données existe et ouvrez à nouveau le formulaire. Si l’erreur persiste, contactez votre administrateur. <br/>Si le formulaire n’est plus nécessaire, veuillez le supprimer afin d’éviter tout problème.
+DataObjectFormModelHandler.shortMessage=Impossible de trouver l''objet de données ''{0}'' sur le projet.
+DataObjectFormModelHandler.fullMessage=Impossible de trouver l''objet de données ''{0}'' sur le projet. <br/>Cela signifie généralement que l''objet de données a été supprimé ou qu''il y a un problème de compilation sur le projet. <br/>Vérifiez que l''objet de données existe et ouvrez à nouveau le formulaire. Si l''erreur persiste, consultez votre administrateur. <br/>Si le formulaire n''est plus nécessaire, veuillez le supprimer pour éviter tout problème éventuel.
 DataObjectFormModelHandler.dataObject=Objet de données
