--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_fr.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_fr.properties
@@ -8,16 +8,16 @@ JBPMFormModelCreationViewImpl.TaskName=Formulaire de tâches pour ''{0}'' ({1})
 org.kie.workbench.common.forms.jbpm.model.authoring.process.BusinessProcessFormModel=Processus métier
 org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Tâche
 
-MissingProcess.shortMessage=Impossible de trouver le processus avec l’ID ''{0}'' sur le projet.
-MissingProcess.fullMessage=Impossible de trouver le processus avec l’ID ''{0}'' sur le projet. <br/>Cela signifie généralement que le processus a été supprimé ou qu’il est malformé. Fermez le formulaire et vérifiez que le processus existe, puis ouvrez à nouveau le formulaire. Si l’erreur persiste, contactez votre administrateur ou générez à nouveau le formulaire. <br/>Si le formulaire n’est plus nécessaire, veuillez le supprimer afin d’éviter tout problème.
+MissingProcess.shortMessage=Impossible de trouver le processus avec l''ID ''{0}'' sur le projet.
+MissingProcess.fullMessage=Impossible de trouver le processus avec l''ID ''{0}'' sur le projet. <br/>Cela signifie généralement que le processus a été supprimé ou qu''il est malformé. Fermez le formulaire et vérifiez que le processus existe, puis ouvrez à nouveau le formulaire. Si l''erreur persiste, vérifiez auprès de votre administrateur ou générez à nouveau le formulaire. <br/>Si le formulaire n''est plus nécessaire, veuillez le supprimer pour éviter tout problème éventuel.
 
 MissingTask.shortMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''.
-MissingTask.fullMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''. <br/>Cela signifie généralement que la tâche a été supprimée du processus ou que le formulaire a été généré avant l’enregistrement du processus. <br/>Veuillez fermer le formulaire et vérifier que la tâche existe dans le processus, enregistrer le processus et régénérer le formulaire. <br/>Si le formulaire n’est plus nécessaire, veuillez le supprimer afin d’éviter tout problème.
+MissingTask.fullMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''. <br/>Cela signifie généralement que la tâche a été supprimée du processus ou que le formulaire a été généré avant que le processus ne soit sauvegardé. <br/>Veuillez fermer le formulaire et vérifier que la tâche existe dans le processus, sauvegarder le processus et régénérer le formulaire. <br/>Si le formulaire n''est plus nécessaire, veuillez le supprimer pour éviter tout problème éventuel.
 
 process=Processus
 
 FieldProperties.maxDocuments=Nombre maximum de documents
-FieldProperties.maxDocuments.helpMessage=Détermine le nombre de documents pouvant être ajoutés au champ. Si la valeur est égale à 0, il n’y a pas de limite. Toute autre valeur supérieure ou égale à 1 fixera la limite du nombre de documents.
+FieldProperties.maxDocuments.helpMessage=Détermine le nombre de documents pouvant être ajoutés au champ. Si la valeur est égale à 0, il n''y a pas de limite. Toute autre valeur supérieure ou égale à 1 fixera la limite du nombre de documents.
 
 DocumentUploadViewImpl.abort=Abandonner
 DocumentUploadViewImpl.browse=Parcourir
@@ -30,6 +30,6 @@ DocumentUploadViewImpl.dropFilesHere=Déposez vos fichiers ici
 DocumentUploadViewImpl.maxDocuments= Maximum : {0} fichiers
 DocumentUploadViewImpl.upload=Envoyer
 
-DocumentListFieldRenderer.maxContentLengthWarning=Avertissement : Le contenu envoyé est peut-être trop volumineux ({0}), ce qui peut entraîner des problèmes lors du transfert du contenu des documents.
+DocumentListFieldRenderer.maxContentLengthWarning=Attention : Le contenu envoyé est peut-être trop volumineux ({0}), ce qui peut entraîner des problèmes lors du transfert du contenu des documents.
 
 DocumentListFieldRenderer.maxDocumentsReached=Le nombre de documents autorisé est de {0}.
