--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_ja.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_ja.properties
@@ -9,10 +9,10 @@ org.kie.workbench.common.forms.jbpm.model.authoring.process.BusinessProcessFormM
 org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Task
 
 MissingProcess.shortMessage=ID ''{0}'' のプロセスがプロジェクトで見つかりません。
-MissingProcess.fullMessage=プロジェクトには id が ''{0}'' のプロセスが見つかりません。<br/>これは通常、プロセスが削除されたか、不正な形式であることを示しています。フォームを閉じて、プロセスが存在することを確認し、フォームを再度開いてください。エラーが続く場合には、管理者に確認するか、フォームを再度生成してください。<br/>フォームが不要になった場合には、フォームを削除して、問題を回避してください。
+MissingProcess.fullMessage=ID ''{0}'' のプロセスがプロジェクトで見つかりません。<br/>これは通常、プロセスが削除されたか、プロセスに問題がある場合です。フォームを閉じて、プロセスが存在することを確認し、フォームを再度開いてください。エラーが解決しない場合には管理者と確認してください。あるいはもう一度フォームを作成してください。<br/>フォームが不要になった場合は、問題が発生しないようにフォームを削除してください。
 
 MissingTask.shortMessage=タスク名 ''{0}'' のタスクが プロセス ''{1}'' で見つかりません。
-MissingTask.fullMessage=<br/>通常これは、タスクがプロセスから削除されたか、プロセスが保存される前にフォームが生成されたことを示します。<br/>フォームを閉じてタスクの存在を確認し、プロセスを保存してから再度フォームを開いてください。<br/>フォームが不要になった場合は、問題を避けるためにこれを削除してください。
+MissingTask.fullMessage=タスク名 ''{0}'' のタスクが プロセス ''{1}'' で見つかりません。<br/>これは通常、タスクがプロセスから削除されたか、またはプロセスの保存前にフォームが生成されていることを意味します。<br/>フォームを閉じてタスクがプロセスに存在することを確認してから、プロセスを保存してフォームを再生成してください。<br/>フォームが不要になった場合は、問題が発生しないようにフォームを削除してください。
 
 process=Process
 
@@ -30,6 +30,6 @@ DocumentUploadViewImpl.dropFilesHere=こちらにファイルをドロップ
 DocumentUploadViewImpl.maxDocuments= 最大ファイル数: {0} 個
 DocumentUploadViewImpl.upload=アップロード
 
-DocumentListFieldRenderer.maxContentLengthWarning=警告:アップロードしたコンテンツのサイズ  ({0})  が大きすぎるので、ドキュメントのコンテンツの転送に問題が発生する可能性があります。
+DocumentListFieldRenderer.maxContentLengthWarning=警告: アップロードしたコンテンツのサイズ ({0}) が大きすぎるので、ドキュメントのコンテンツの転送に問題が発生する可能性があります。
 
 DocumentListFieldRenderer.maxDocumentsReached=許容範囲のドキュメント数は {0} です。
