--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/resources/org/kie/workbench/common/screens/archetype/mgmt/client/resources/i18n/ArchetypeManagementConstants_fr.properties
@@ -21,29 +21,29 @@ ArchetypeManagement.Cancel=Annuler
 ArchetypeManagement.Loading=Chargement
 ArchetypeManagement.Search=Rechercher
 ArchetypeManagement.EmptyFieldValidation=Le champ "{0}" doit être renseigné.
-ArchetypeManagement.ArchetypeAddedMessage=L’archétype a été ajouté.
-ArchetypeManagement.ArchetypeDeletedMessage=L’archétype a été supprimé.
-ArchetypeManagement.ArchetypeValidatedMessage=L’archétype a été validé.
+ArchetypeManagement.ArchetypeAddedMessage=L''archétype a été ajouté.
+ArchetypeManagement.ArchetypeDeletedMessage=L''archétype a été supprimé.
+ArchetypeManagement.ArchetypeValidatedMessage=L''archétype a été validé.
 ArchetypeManagement.ArchetypeAlreadyExistsMessage=Un archétype a déjà été ajouté avec les informations fournies.
-ArchetypeManagement.InvalidArchetypeExceptionMessage=L’archétype informé ne peut pas être ajouté, car il ne s’agit pas d’un module KIE valide.
-ArchetypeManagement.MavenExecutionExceptionMessage=Erreur d’exécution : {0}
-ArchetypeManagement.DeleteArchetypeTitle=Supprimer l’archétype
+ArchetypeManagement.InvalidArchetypeExceptionMessage=L''archétype informé ne peut pas être ajouté, car il ne s''agit pas d''un module KIE valide.
+ArchetypeManagement.MavenExecutionExceptionMessage=Détails des erreurs : {0}
+ArchetypeManagement.DeleteArchetypeTitle=Supprimer l''archétype
 ArchetypeManagement.DeleteArchetypeMessage=Voulez-vous vraiment supprimer définitivement cet archétype ? Cette action ne peut pas être annulée.
 ArchetypeManagement.OfN=sur {0}
 ArchetypeManagement.ItemCountIndicatorText={0}-{1} sur {2}
 ArchetypeManagement.IncludeTooltip=Cochez ce champ pour que cet archétype puisse être utilisé.
-ArchetypeManagement.GroupIdTooltip=ID de groupe de l’archétype.
-ArchetypeManagement.ArtifactIdTooltip=ID d’artefact de l’archétype.
-ArchetypeManagement.VersionTooltip=Version de l’archétype.
-ArchetypeManagement.CreatedDateTooltip=Date de création de l’archétype.
-ArchetypeManagement.StatusTooltip=État de l’archétype.
-ArchetypeManagement.ActionsTooltip=Actions pouvant être effectuées sur l’archétype.
+ArchetypeManagement.GroupIdTooltip=ID de groupe de l''archétype.
+ArchetypeManagement.ArtifactIdTooltip=ID d''artefact de l''archétype.
+ArchetypeManagement.VersionTooltip=Version de l''archétype.
+ArchetypeManagement.CreatedDateTooltip=Date de création de l''archétype.
+ArchetypeManagement.StatusTooltip=État de l''archétype.
+ArchetypeManagement.ActionsTooltip=Actions pouvant être effectuées sur l''archétype.
 ArchetypeManagement.SelectionCounter={0} éléments sur {1} sélectionnés
 ArchetypeManagement.ValidMessage=Cet archétype est valide
-ArchetypeManagement.InvalidMessage=Cet archétype n’est pas valide - Motif : {0}
+ArchetypeManagement.InvalidMessage=Cet archétype n''est pas valide - Motif : {0}
 ArchetypeManagement.DefaultMessage=Par défaut
 ArchetypeGroupId=ID de groupe
-ArchetypeArtifactId=ID d’artefact
+ArchetypeArtifactId=ID d''artefact
 ArchetypeVersion=Version
 ArchetypeTableView.CreatedDate=Date de création
 ArchetypeTableView.Actions=Actions
@@ -51,9 +51,9 @@ ArchetypeTableView.Include=Inclure
 ArchetypeTableView.AddArchetype=Ajouter un archétype
 ArchetypeTableView.NoResults=Aucun résultat
 ArchetypeTableView.NoContentTitle=Vos archétypes apparaissent ici
-ArchetypeTableView.NoContentSubTitle=Aucun archétype n’est disponible pour vous.
+ArchetypeTableView.NoContentSubTitle=Aucun archétype n''est disponible pour vous.
 ArchetypeItemView.Delete=Supprimer
 ArchetypeItemView.Validate=Valider
 ArchetypeItemView.SetAsDefault=Définir comme valeur par défaut
 ArchetypeItemView.Default=D
-
+AddArchetypeModalView.ArchetypeCouldNotBeAdded=L''archétype n''a pas pu être ajouté.
