--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
@@ -45,15 +45,15 @@ modelEditor_copying_error=Se produjo un error durante la copia de archivos
 
 modelEditor_confirm_save_model_before_project_change_=Se ha modificado el modelo de datos del proyecto actual, ¿desea guardarlo antes de cambiar de: \n\nproyecto: {0} \n\na\n\nproyecto: {1}
 
-modelEditor_confirm_save_model_before_project_change=Se ha <B><I> modificado</I></B> el modelo de datos del proyecto actual. ¿Desea que sus cambios se <B><I> guarden</I></B> antes de <B><I>cambiar</I></B> de:</BR>proyecto: {0} </BR>a</BR>proyecto: {1}?
+modelEditor_confirm_save_model_before_project_change=Se ha modificado el modelo de datos del proyecto actual, ¿desea que se guarden los cambios antes de pasar de:project: {0}a proyecto: {1} ?
 
-modelEditor_confirm_save_model_before_project_change_force=Usuario {0} <B><I>actualizado</I></B> proyecto actual {1} modelo de datos, probablemente en otra sesión o editor.</BR>¿Desea <B><I>forzar<\I></B> que sus cambios se <B><I>>guarden</I></B> antes de <B><I> cambiar</I></B> los proyectos?
+modelEditor_confirm_save_model_before_project_change_force=El usuario {0} ha actualizado el modelo de datos del proyecto {1} actual, probablemente en otra sesión o editor
 
 modelEditor_notify_project_change_=El proyecto actual se cambiará desde: \n\nproyecto: {0} \n\na\n\nproyecto: {1}
 
-modelEditor_notify_project_change=El proyecto actual se <B><I>cambiará</I></B> desde:</BR>proyecto: {0}</BR>a</BR>proyecto: {1}.
+modelEditor_notify_project_change=El proyecto actual se cambiará de:proyecto: {0}a proyecto: {1}.
 
-modelEditor_notify_readonly_objects_read=Los siguientes objetos de datos fueron creados o han sido  modificados por un editor externo y se abrirán en modo de solo lectura.
+modelEditor_notify_readonly_objects_read=Los siguientes objetos de datos fueron creados o han sido modificados por un editor externo y se abrirán en modo de solo lectura.
 
 modelEditor_notify_externally_modified_objects_read=Los siguientes objetos de datos fueron modificados por un editor externo. Las modificaciones locales de estos objetos podrían sobrescribir las modificaciones externas cuando se genere el modelo.
 
@@ -128,7 +128,7 @@ objectEditor_durationLabel=Duración
 objectEditor_durationHelp=Establece la duración de un evento. Si se establece, el usuario puede declarar cuál de los atributos del evento contiene la duración del evento. Si no, por defecto todos los eventos tienen una duración 0. (Ver fusión de drools)
 
 objectEditor_expiresLabel=Expira
-objectEditor_expiresHelp=Establece el "timeOffset" para la expiración de un evento. Si se configura, este valor debe ser un intervalo temporal en el formulario:</BR>&nbsp;&nbsp;[#d][#h][#m][#s][#[ms]]</BR>Donde [ ] significa un parámetro opcional y # significa un valor numérico.</BR>ej.: 1d2h, significa un día y dos horas. (Ver fusión de drools)
+objectEditor_expiresHelp=Establece el "timeOffset" para la expiración de un evento. Si se configura, este valor debe ser un intervalo temporal en el formulario:</BR>&nbsp;&nbsp;[#d][#h][#m][#s][#[ms]]</BR>Donde [ ] significa un parámetro opcional y # significa un valor numérico.</BR>ej.: (Ver fusión de drools)
 
 objectEditor_remotableLabel=Remoto
 objectEditor_remotableHelp=Marque esta clase para ponerla a disposición de los servicios remotos de jBPM. (REST, JMS y WS, Ver jBPM)
@@ -201,9 +201,9 @@ validation_error_position_greater_or_equal_than_and_lower_than=La posición "{0}
 advanced_domain_screen_name=Avanzado
 
 advanced_domain_wizard_title=Agregar nueva anotación
-advanced_domain_wizard_search_page_title=Buscar anotación
+advanced_domain_wizard_search_page_title=agregar anotación
 advanced_domain_wizard_search_page_search_field=Nombre de la clase de anotación
-advanced_domain_wizard_search_page_search_field_place_holder=buscar nombre de la clase de anotación
+advanced_domain_wizard_search_page_search_field_place_holder=Nombre de la clase de anotación
 advanced_domain_wizard_search_page_search_button_tooltip=Haga clic en el botón de búsqueda para cargar la definición de la anotación.
 advanced_domain_wizard_search_page_message_annotation_not_loaded=No está cargada la definición de la anotación.
 advanced_domain_wizard_search_page_message_annotation_is_loaded=La definición de la anotación se cargó correctamente.
@@ -215,7 +215,7 @@ advanced_domain_wizard_value_pair_editor_page_message_value_validated=Se validó
 advanced_domain_wizard_value_pair_editor_page_message_value_not_validated=El par de valores no está validado.
 
 advanced_domain_annotation_list_editor_message_confirm_annotation_deletion=¿Está seguro de que desea quitar la anotación: @{0} de {1}?
-advanced_domain_annotation_list_editor_message_value_pair_has_no_default_value=Par de valores: "{0}" no tiene un valor predeterminado en la especificación de la anotación  @"{1}". Por ello, debe tener un valor siempre que se aplique la anotación, si no, el código obtenido no será válido.
+advanced_domain_annotation_list_editor_message_value_pair_has_no_default_value=Par de valores: "{0}" no tiene un valor predeterminado en la especificación de la anotación @"{1}". Por ello, debe tener un valor siempre que se aplique la anotación, si no, el código obtenido no será válido.
 
 advanced_domain_annotation_list_editor_action_add=agregar anotación
 advanced_domain_annotation_list_editor_action_delete=eliminar
@@ -261,7 +261,7 @@ persistence_domain_objectEditor_audited_field_help=Marque este objeto de datos p
 
 persistence_domain_objectEditor_on_make_persistable_message=Un objeto de datos ya creado está a punto de hacerse persistente
 
-persistence_domain_objectEditor_required_identifier_is_missing_message=No se encontró el campo requerido <B><I>Identificador</I></B> en el actual objeto de datos. <B><I>¿Desea generarlo automáticamente?</I></B></BR></BR>
+persistence_domain_objectEditor_required_identifier_is_missing_message=El campo de identificación requerido no se encontró en el objeto de datos actual. <B><I>¿Quiere generarlo automáticamente?</I></B></BR></BR>
 
 persistence_domain_objectEditor_review_relationship_fields_message=Es posible que los siguientes campos de relaciones tengan que revisarse manualmente para agregar cualquier opción faltante de configuración de relaciones:
 
