--- a/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-client/src/main/resources/org/kie/workbench/common/screens/defaulteditor/client/editor/resources/i18n/GuvnorDefaultEditorConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-default-editor/kie-wb-common-default-editor-client/src/main/resources/org/kie/workbench/common/screens/defaulteditor/client/editor/resources/i18n/GuvnorDefaultEditorConstants_fr.properties
@@ -15,7 +15,7 @@
 #
 MetaFileEditor=Éditeur de métafichier [ {0} ]
 TextEditor=Éditeur de texte [ {0} ]
-NewFileDescription=Importer l’actif
+NewFileDescription=Importer la ressource
 Options=Options
 Uploading=Envoi…
 
