--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_es.properties
@@ -63,8 +63,8 @@ GroupID=ID de grupo
 GroupIdExample=Ejemplo: com.myorganization.myprojects
 GroupIdMoreInfo=Un identificador universal único para un proyecto. Es normal usar un nombre de paquete totalmente calificado para distinguirlo de otros proyectos con un nombre similar.
 ArtifactID=ID de artefacto
-ArtifactIDExample=Ejemplo: MyProject
-ArtifactIDMoreInfo=El identificador de este artefacto que es único dentro del grupo dado por el ID de grupo. Un artefacto es algo que se produce o se usa en un proyecto. Entre los ejemplos de artefactos producidos por Maven para un proyecto se incluyen los siguientes: JAR, distribuciones de fuente y binarias, y WAR.
+ArtifactIDExample=Ejemplo: MiProyecto
+ArtifactIDMoreInfo=El identificador de este artefacto que es único dentro del grupo dado por el ID de grupo. Un artefacto es algo que se produce o se usa en un proyecto. Ejemplos de artefactos producidos por Maven para un proyecto incluyen: JARs, distribuciones fuente y binarias, y WARs.
 Version=Versión
 VersionExample=1.0.0
 VersionMoreInfo=La versión actual del artefacto producido por este proyecto.
@@ -166,8 +166,8 @@ NoServersAvailableForProvisioning=No se puede proveer debido a que no hay servid
 ContainerIdAlreadyInUse=El nombre del contenedor ya está en uso, elija un nombre diferente.
 ProjectPreferences=Preferencias del proyecto
 DeployFailed=Se produjo un error en la implementación de la configuración del servidor.
-DeploymentSkippedDueToNoServerTemplateConfiguredForMode=Se omitió la implementación, no se encontró ningún servidor funcionando en modo {0}.
-DeploymentSkippedCannotUpdateDeploymentsOnProduction=Se omitió la implementación, no se permite actualizar las implementaciones en los servidores que se ejecutan en modo de 'producción'.
+DeploymentSkippedDueToNoServerTemplateConfiguredForMode=Se omitió la implementación, no se encontró ningún servidor funcionando en modo ''{0}''.
+DeploymentSkippedCannotUpdateDeploymentsOnProduction=Se omitió la implementación, no se permite actualizar las implementaciones en los servidores que se ejecutan en modo de ''producción''.
 DeploySuccessfulButContainerFailedToStart=La implementación en la configuración del servidor se realizó correctamente, pero el contenedor no se inició.
 DeploySuccessfulAndContainerStarted=La implementación en la configuración del servidor se realizó correctamente y el contenedor también se inició de manera satisfactoria.
 DeploySuccessfulAndContainerUpdated=La implementación en la configuración del servidor se realizó correctamente y el contenedor también se actualizó de manera satisfactoria.
