--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_ja.properties
@@ -32,7 +32,7 @@ Identity=アイデンティティ
 Equality=等価性
 Stream=ストリーム
 Cloud=クラウド
-Name=Name
+Name=名前
 PleaseSelectAKBase=KIE base を選択してください
 Ok=OK
 Cancel=キャンセル
@@ -63,8 +63,8 @@ GroupID=グループ ID
 GroupIdExample=例: com.myorganization.myprojects
 GroupIdMoreInfo=プロジェクトのユニバーサル一意識別子。通常は、完全修飾パッケージ名を使用して、同じような名前の他のプロジェクトと区別します。
 ArtifactID=アーティファクト ID
-ArtifactIDExample=例:MyProject
-ArtifactIDMoreInfo=グループ ID で指定したグループで一意となるアーティファクトの ID。アーティファクトは、プロジェクトが生成または使用するアイテムを指します。Maven がプロジェクト用に生成するアーティファクトの例は、以下のとおりです:JAR、ソースおよびバイナリーディストリビューション、および WAR
+ArtifactIDExample=例: MyProject
+ArtifactIDMoreInfo=グループ ID で指定したグループで一意となるアーティファクトの ID。アーティファクトは、プロジェクトが生成または使用するアイテムを指します。Maven がプロジェクト用に生成するアーティファクトの例は、JAR、ソースおよびバイナリーディストリビューション、および WAR です。
 Version=バージョン
 VersionExample=1.0.0
 VersionMoreInfo=このプロジェクトで生成されたアーティファクトの現在のバージョン。
@@ -152,8 +152,8 @@ WhiteList=パッケージのホワイトリスト
 SomePackagesIncluded=含まれているいくつかのパッケージ
 Repositories=リポジトリー
 RepositoriesValidation=検証
-RepositoriesValidationExplanationL1=これらの Maven リポジトリは、(1) 新規プロジェクトまたはモジュールの作成時、(2) プロジェクトを Maven リポジトリにインストールまたはデプロイする際に、プロセスの GAV の一意性を確認するために使用されます。 
-RepositoriesValidationExplanationL2=これらはプロジェクトの pom、プロジェクトのディストリビューション管理設定および  Maven のグローバル設定から取得されます。
+RepositoriesValidationExplanationL1=これらの Maven リポジトリは、(1) 新規プロジェクトまたはモジュールの作成時、(2) プロジェクトを Maven リポジトリにインストールまたはデプロイする際に、プロセスの GAV の一意性を確認するために使用されます。
+RepositoriesValidationExplanationL2=これらはプロジェクトの pom、プロジェクトのディストリビューション管理設定および Maven のグローバル設定から取得されます。
 RepositoryInclude=含める
 Select=選択
 DependencyIsMissingAVersion=依存関係でバージョンが見つかりません
