--- a/kie-wb-common-screens/kie-wb-common-project-explorer/kie-wb-common-project-explorer-client/src/main/resources/org/kie/workbench/common/screens/explorer/client/resources/i18n/ProjectExplorerConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-explorer/kie-wb-common-project-explorer-client/src/main/resources/org/kie/workbench/common/screens/explorer/client/resources/i18n/ProjectExplorerConstants_fr.properties
@@ -15,13 +15,13 @@
 #
 explorerTitle=Explorateur de projets
 nullEntry=---
-noItemsExist=--- Aucun élément n’a été trouvé ---
+noItemsExist=--- Aucun élément n''a été trouvé ---
 businessView=Métier
 technicalView=Technique
-organizationalUnits=Unités d’organisation
+organizationalUnits=Unités d''organisation
 repositories=Référentiels
 projects=Projets
-organizationalUnitColon=Unité d’organisation :
+organizationalUnitColon=Unité d''organisation :
 repositoryColon=Référentiel :
 projectColon=Projet :
 packageColon=Package :
@@ -35,7 +35,7 @@ showAsLinks=Afficher sous la forme de liens
 miscellaneous_files=Divers
 LoadingDotDotDot=Chargement…
 downloadProject=Télécharger le projet
-openProjectEditor=Ouvrir l’éditeur de projet
+openProjectEditor=Ouvrir l''éditeur de projet
 sort=Trier
 ClickToDisplay=Cliquez pour afficher/masquer les actifs
 lockHint=Verrouillé par
