--- a/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_fr.properties
@@ -53,7 +53,7 @@ KModuleDotXml=kmodule.xml
 Problems=Problèmes
 FileName=Fichier
 GroupID=ID de groupe
-ArtifactID=ID d’artefact
+ArtifactID=ID d''artefact
 VersionID=ID de version
 Dependencies=Dépendances
 AddFromRepository=Ajouter à partir du référentiel
