--- a/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_ja.properties
@@ -32,7 +32,7 @@ Identity=アイデンティティ
 Equality=等価性
 Stream=ストリーム
 Cloud=クラウド
-Name=Name
+Name=名前
 PleaseSelectAKBase=KIE base を選択してください
 Ok=OK
 Cancel=キャンセル
