--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_es.properties
@@ -147,4 +147,11 @@ ClientContainerRuntimeOperation.StopScanner=Detener escáner
 ContainerUpdateEvent.ErrorMessage=La operación "{0}" tuvo errores en {1} instancia(s) del servidor.
 ContainerUpdateEvent.WarnMessage=Es probable que la operación "{0}" haya tenido errores en algunas de {1} instancia(s) del servidor.
 ContainerUpdateEvent.SuccessMessage=La operación "{0}" se realizó correctamente; se dañaron {1} instancias del servidor.
+NewContainer.GAVNotExist=GAV ''{0}'' no se encuentra en el repositorio de Maven.
+NewContainer.GAVNotExist.Save=GAV ''{0}'' no se encuentra en el repositorio de Maven. ¿Está seguro de que desea hacer esto? 
+NewContainer.Save=Aceptar
+NewContainer.SaveContainerSpec=Guardar la especificación del contenedor
+NewContainer.Deploying={0} está desplegando
+NewContainer.FailedContainer=El contenedor falló en el servidor kie.
+CanNot_Stop_Container=No es posible detener el contenedor debido a una instancia de proceso en ejecución.
 
