--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_ja.properties
@@ -42,7 +42,7 @@ ContainerRulesConfigView.StartScannerErrorMessage=スキャナーの開始に失
 ContainerRulesConfigView.StopScanner=スキャナーを停止する
 ContainerRulesConfigView.StopScannerErrorMessage=スキャナーの停止に失敗しました。
 ContainerRulesConfigView.Upgrade=アップグレード
-ContainerRulesConfigView.UpgradeContainerMessage=アクティブなプロセスでデプロイメントユニットをアップグレードすると、エラーが発生します (整合性を保つために、プロセスを自動的にアップグレードすることはできません)。
+ContainerRulesConfigView.UpgradeContainerMessage=アクティブなプロセスでデプロイメントユニットをアップグレードすると、エラーが発生します (整合性を保つために、プロセスは自動的にアップグレードすることができません)。
 ContainerRulesConfigView.UpgradeErrorMessage=アップグレードが失敗しました。
 ContainerRulesConfigView.UpgradeSuccessMessage=デプロイメントユニットは次のバージョンにアップグレードされました: {0}
 ContainerRulesConfigView.Version=バージョン
@@ -78,7 +78,7 @@ InfoTitleView.GroupId=グループ ID:
 NewContainerFormView.ArtifactId=アーティファクト ID
 NewContainerFormView.GroupName=グループ名
 NewContainerFormView.InvalidErrorMessage=無効な名前。
-NewContainerFormView.Name=Name
+NewContainerFormView.Name=名前
 NewContainerFormView.Alias=エイリアス (任意)
 NewContainerFormView.NewContainerWizardSaveError=新規デプロイメントユニットのエラー。
 NewContainerFormView.NewContainerWizardSaveSuccess=新規デプロイメントユニットが作成されました。
@@ -86,7 +86,7 @@ NewContainerFormView.NewContainerWizardTitle=新規デプロイメント単位
 NewContainerFormView.TitleText=デプロイメントユニット
 NewContainerFormView.Version=バージョン
 NewContainerFormView.StartContainerText=デプロイメントユニットをスタートしますか？
-NewContainerFormView.ProductionModeSupportsDoesntSnapshots=PRODUCTION モードで実行中のサーバーは、SNAPSHOT アーティファクトのデプロイを許可しません。
+NewContainerFormView.ProductionModeSupportsDoesntSnapshots=PRODUCTION モードで実行中のサーバーは SNAPSHOT アーティファクトのデプロイを許可しません。
 NewTemplateView.Capabilities=機能:
 NewTemplateView.InvalidErrorMessage=無効な名前。
 NewTemplateView.Name=名前:
@@ -148,4 +148,10 @@ ContainerUpdateEvent.ErrorMessage=''{0}'' 操作が {1} サーバーインスタ
 ContainerUpdateEvent.WarnMessage=''{0}'' 操作が一部の {1} サーバーインスタンスで失敗した可能性があります。
 ContainerUpdateEvent.SuccessMessage=''{0}'' 操作が成功しました。{1} サーバーインスタンスが影響を受けました。
 NewContainer.GAVNotExist=MAV リポジトリーには GAV ''{0}'' がありません。
+NewContainer.GAVNotExist.Save=MAV リポジトリーには GAV ''{0}'' がありません。デプロイしてもよろしいですか?
+NewContainer.Save=OK
+NewContainer.SaveContainerSpec=コンテナ仕様を保存
+NewContainer.Deploying={0} はデプロイ中です
+NewContainer.FailedContainer=コンテナーが kie サーバーで失敗しました。
+CanNot_Stop_Container=プロセスインスタンスが実行しているため、コンテナーを停止することはできません。
 
