--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_fr.properties
@@ -31,9 +31,9 @@ DataSources=Sources de données
 ProcessDefinitions=Définitions de processus
 ProcessInstances=Instances de processus
 Provisioning=Provisioning
-Rule_Deployments=Serveurs d’exécution
+Rule_Deployments=Serveurs d''exécution
 Jobs=Travaux
-ExecutionErrors=Erreurs d’exécution
+ExecutionErrors=Erreurs d''exécution
 Task_Inbox=Boîte de réception des tâches
 Process_Reports=Rapports sur les processus
 Task_Reports=Rapports sur les tâches
@@ -46,8 +46,8 @@ WorkbenchRootNodeName=Tableau de référence
 DataModelerEditSources=Modifier le code source
 ResourcePlanner=Planificateur de ressources
 WorkbenchRootNodeHelp=Autorisations générales du tableau de référence, liées à un aucun type de ressource spécifique.
-DataModelerEditSourcesHelp=Activez la modification du code source généré par le modélisateur de données. Le code source est disponible dans l’onglet "Source" de l’éditeur du Modeleur de données.
-ResourcePlannerHelp="Activez la prise en charge du Planificateur, comme les annotations de domaine, l’éditeur de solveur, …
+DataModelerEditSourcesHelp=Activez la modification du code source généré par le modélisateur de données. Le code source est disponible dans l''onglet "Source" de l''éditeur du Modeleur de données.
+ResourcePlannerHelp="Activez la prise en charge du Planificateur, comme les annotations de domaine, l''éditeur de solveur, …
 PermissionAllow=Autoriser
 PermissionDeny=Refuser
 Admin=Administrateur
@@ -57,9 +57,9 @@ Groups=Groupes
 Users=Utilisateurs
 Library=Projets
 MavenRepositoryPagedJarTableDownloadJar=Télécharger le fichier JAR
-MavenRepositoryPagedJarTableDownloadJarHelp=Permettre le téléchargement des fichiers JAR à partir du référentiel d’artefacts
-KieServerError403=Vous n’avez pas accès au chargement des données à partir d’un serveur distant. Contactez votre administrateur système.
-KieServerError401=Informations d’identification non valides pour charger les données à partir d’un serveur distant. Contactez votre administrateur système.
+MavenRepositoryPagedJarTableDownloadJarHelp=Permettre le téléchargement des fichiers JAR à partir du référentiel d''artefacts
+KieServerError403=Vous n''avez pas accès au chargement des données à partir d''un serveur distant. Contactez votre administrateur système.
+KieServerError401=Informations d''identification non valides pour charger les données à partir d''un serveur distant. Contactez votre administrateur système.
 Help=Aide
 Artifacts=Artefacts
 EditGlobalPreferences=Modifier les préférences globales
@@ -78,8 +78,8 @@ SessionTimeout=Timeout de session
 InvalidBusResponseProbablySessionTimeout=Réponse non valide reçue du serveur. Cela signifie probablement que vous avez été déconnecté en raison de votre inactivité. Voulez-vous vous reconnecter ?
 LayoutEditorComponentPalette=Composants
 ExperimentalSettings=Expérimental
-ErrorDetailsSuccessfullyCopiedToClipboard=Les détails sur l’erreur ont été copiés dans le presse-papiers.
-ErrorDetailsFailedToBeCopiedToClipboard=Les détails sur l’erreur n’ont pas pu être copiés dans le presse-papiers, car ce navigateur ne le permet pas.
+ErrorDetailsSuccessfullyCopiedToClipboard=Les détails sur l''erreur ont été copiés dans le presse-papiers.
+ErrorDetailsFailedToBeCopiedToClipboard=Les détails sur l''erreur n''ont pas pu être copiés dans le presse-papiers, car ce navigateur ne le permet pas.
 ScenarioSimulationEditor=Scénarios de test
 ProcessAdministration=Administration des processus
 TestReport=Rapport de test
@@ -88,8 +88,14 @@ EditProfilePreferencesHelp=Autoriser les utilisateurs à sélectionner le profil
 CustomTasksAdministration=Administration des tâches de service
 DataTransfer=Transfert de données Dashbuilder
 AccessDataTransfer=Accéder au transfert de données Dashbuilder
-AccessDataTransferHelp=Autorisation d’importation et d’exportation de données Dashbuilder (ensembles de données, perspectives et navigation).
+AccessDataTransferHelp=Autorisation d''importation et d''exportation de données Dashbuilder (ensembles de données, perspectives et navigation).
+ShowMetricsTab=Afficher l''onglet des métriques du projet
+ShowMetricsTabHelp=Permission de montrer l''onglet des paramètres du projet
+ShowChangeRequestTab=Afficher l''onglet de demande de changement de projet
+ShowChangeRequestTabHelp=Autorisation d''afficher ou de masquer l''onglet de demande de modification du projet
+ShowProjectToolbar=Afficher la barre d''outils du projet
+ShowProjectToolbarHelp=Autorisation d''afficher la barre d''outils du projet qui contient les boutons Test, Build et Deploy
 DisconnectedFromServer=Déconnecté du serveur
-CouldNotConnectToServer=Impossible de se connecter au serveur. Cela indique un probable problème réseau. Voulez-vous recharger l’application ?
+CouldNotConnectToServer=Impossible de se connecter au serveur. Cela indique un probable problème réseau. Voulez-vous recharger l''application ?
 Archetypes=Archétypes
 
