--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_fr.properties
@@ -26,10 +26,10 @@ TestRunnerReportingViewImpl.ScenarioStatus=État du scénario
 TestResultDonutPresenter.Passed=Réussite
 TestResultDonutPresenter.Failed=Échec
 GenericErrorPopup.SystemErrorTitle=Erreur système
-GenericErrorPopup.SystemErrorAlert=Une erreur système inattendue s’est produite.
+GenericErrorPopup.SystemErrorAlert=Une erreur système inattendue s''est produite.
 GenericErrorPopup.SystemErrorDetails=Des événements imprévus se sont produits et le système ne savait pas comment les traiter.
 GenericErrorPopup.SystemErrorDetailsInLog=Les informations ont été envoyées au fichier journal du système.
-GenericErrorPopup.ErrorDetails=Détails sur l’erreur
+GenericErrorPopup.ErrorDetails=Détails sur l''erreur
 GenericErrorPopup.ErrorId=ID : {0}
 GenericErrorPopup.DoNotShowAgainMsg=Ne plus afficher ce message pour
 GenericErrorPopup.TimeSelectionOneHour=1 heure
