--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_fr.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_fr.properties
@@ -13,7 +13,10 @@ editor.actions.migrateWarning=Avertissement : cette action ne peut pas être an
 editor.actions.migrateConfirmAction=La migration du diagramme préparera le fichier actuel en vue de sa modification par le concepteur jBPM. Vous ne pourrez pas annuler cette action. Procédez avec précaution.
 editor.actions.migrateCommitMessage=Le fichier {0} a été migré de Stunner vers le concepteur jBPM
 editor.actions.migrateErrorProcessAlreadyExists=Il existe déjà un processus de concepteur jBPM pour le fichier cible {0}
-editor.actions.migrateErrorGeneric=Une erreur s’est produite lors de la migration
+editor.actions.migrateErrorGeneric=Une erreur s''est produite lors de la migration
 
-editor.error.generateSvgFileError=Une erreur s’est produite lors de la génération du fichier svg du diagramme
+editor.error.generateSvgFileError=Une erreur s''est produite lors de la génération du fichier svg du diagramme
+editor.error.subprocessNotFound=Sous-processus {0} non trouvé.
+editor.error.subprocessNotSpecified=L''ID du sous-processus n''est pas spécifié.
+editor.toolbox.openSubprocessToolboxAction=Sous-processus ouvert
 
