--- a/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_fr.properties
@@ -16,12 +16,12 @@
 NewItem=Nouvel élément
 ChooseAFactType=--- Choisissez un type ---
 Imports=Importations
-addImportPopupTitle=Ajouter l’importation
-importTypeIsMandatory=Le type d’importation est obligatoire
+addImportPopupTitle=Ajouter l''importation
+importTypeIsMandatory=Le type d''importation est obligatoire
 noImportsDefined=Aucune importation définie
 remove=Supprimer
-promptForRemovalOfImport0=Voulez-vous vraiment supprimer l’importation {0} ?
+promptForRemovalOfImport0=Voulez-vous vraiment supprimer l''importation {0} ?
 importType=Type
 noTypesAvailable=Aucun type disponible en dehors du package
-externalDataObjectsExplanation=Les objets de données externes sont des objets de données qui ne sont pas explicitement définis au sein d’un projet ou des dépendances d’un projet et dont l’auteur d’une règle peut avoir besoin Ils sont généralement fournis par l’exécutable (runtime) Java. Par exemple : java.util.List.
-importedDataObjectsExplanation=Par défaut, seuls les objets de données au sein du même package que l’actif sont disponibles à des fins de création. Des objets de données supplémentaires peuvent être importés à pair d’autres pacakges.
+externalDataObjectsExplanation=Les objets de données externes sont des objets de données qui ne sont pas explicitement définis au sein d''un projet ou des dépendances d''un projet et dont l''auteur d''une règle peut avoir besoin Ils sont généralement fournis par l''exécutable (runtime) Java. Par exemple : java.util.List.
+importedDataObjectsExplanation=Par défaut, seuls les objets de données au sein du même package que l''actif sont disponibles à des fins de création. Des objets de données supplémentaires peuvent être importés à pair d''autres pacakges.
