--- a/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_ja.properties
+++ b/kie-wb-common-widgets/kie-wb-config-resource-widget/src/main/resources/org/kie/workbench/common/widgets/configresource/client/resources/i18n/ImportConstants_ja.properties
@@ -23,5 +23,5 @@ remove=削除
 promptForRemovalOfImport0=本当にインポート ''{0}'' を削除しますか?
 importType=タイプ
 noTypesAvailable=利用可能なタイプがありません
-externalDataObjectsExplanation=外部データオブジェクトとはプロジェクトまたはルール作成者が必要とするであろうプロジェクトの依存関係の中で明示的には定義されていなデータオブジェクトを指します。java.util.List など一般的には Java ランタイムで提供されます。
+externalDataObjectsExplanation=外部データオブジェクトとはプロジェクトまたはルール作成者が必要とするであろうプロジェクトの依存関係の中で明示的には定義されていなデータオブジェクトを指します。一般的には Java ランタイムで提供されます。たとえば、java.util.List などです。
 importedDataObjectsExplanation=デフォルトではアセットとして同じパッケージ内のデータオブジェクトしか作成には使用できません。追加のデータオブジェクトは他のパッケージからインポートすることができます。
