--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieEditorConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieEditorConstants_fr.properties
@@ -14,6 +14,6 @@
 # limitations under the License.
 #
 
-KieEditor.NotAllowedSaving=Vous n’êtes pas autorisé à enregistrer ce fichier.
-KieEditor.UnexpectedErrorWhileSaving=Une erreur inattendue s’est produite lors de la tentative d’enregistrement du fichier.
+KieEditor.NotAllowedSaving=Vous n''êtes pas autorisé à enregistrer ce fichier.
+KieEditor.UnexpectedErrorWhileSaving=Une erreur inattendue s''est produite lors de la tentative d''enregistrement du fichier.
 
