--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieMultipleDocumentEditorConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieMultipleDocumentEditorConstants_fr.properties
@@ -21,8 +21,8 @@ RegisteredDocumentsMenuViewImpl.openDocument=Ouvrir…
 RegisteredDocumentsMenuViewImpl.saveDocuments=Enregistrer tout
 
 NoDocuments.Title=Aucun document disponible.
-NoDocuments.Message=Aucun document supplémentaire n’a été trouvé.
+NoDocuments.Message=Aucun document supplémentaire n''a été trouvé.
 
 SelectDocumentPopupViewImpl.Title=Documents disponibles.
-SelectDocumentPopupViewImpl.SelectDocument=Sélectionnez un document à ouvrir dans l’éditeur.
+SelectDocumentPopupViewImpl.SelectDocument=Sélectionnez un document à ouvrir dans l''éditeur.
 
