--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_es.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_es.properties
@@ -37,13 +37,13 @@ NewItem=Nuevo ítem
 Trash=Basura
 RuleDocHint=Esta es la documentación de las reglas. Descripciones humanas amistosas de la lógica comercial
 Description=Descripción
-documentationDefault=<documentación>
+documentationDefault=<documentation>
 Discussion=Debate
 AddADiscussionComment=Agregar un comentario al debate
 EraseAllComments=Borrar todos los comentarios
 EraseAllCommentsWarning=¿Borrar TODOS los ítems de debate? Tenga en cuenta que esto no se puede deshacer. ¿Está seguro?
 Cancel=Cancelar
-smallCommentBy0On1Small=<small>Comentario de {0} en {1}:</small>
+smallCommentBy0On1Small=<small>Comentario de {0} sobre {1}:</small>
 VersionHistory1=Historia de la versión
 NoHistory=No hay historia.
 View=Ver
@@ -60,7 +60,7 @@ TagsMetaData=Etiquetas
 AddNewTag=Agregar nuevas etiquetas
 RemoveThisTag=Eliminar esta etiqueta
 ForceUnlockConfirmationTitle=Confirmación
-ForceUnlockConfirmationText={0} ¿Está seguro de que desea quitar el bloqueo de este activo? Esto podría dar como resultado que se pierdan los cambios que no se guardaron.
+ForceUnlockConfirmationText=¿Está seguro de que desea quitar el bloqueo de este activo? Esto podría dar como resultado que {0} pierda los cambios sin guardar.
 ByAOnB=Por {0} en {1}
 NoDescription=No hay descripción todavía. ¿Qué hace este activo?
 
