--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_ja.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_ja.properties
@@ -37,13 +37,13 @@ NewItem=新規アイテム
 Trash=ごみ
 RuleDocHint=これはルールのドキュメントです。人が読みやすいビジネスロジックの説明。
 Description=説明
-documentationDefault=<ドキュメンテーション>
+documentationDefault=<documentation>
 Discussion=コメント
 AddADiscussionComment=コメントを追加
-EraseAllComments=コメントをすべて消去
-EraseAllCommentsWarning=すべてのディスカッションアイテムを消去しますか?この操作は元に戻せないことに注意してください。よろしいですか？
+EraseAllComments=コメントを全て消去
+EraseAllCommentsWarning=すべてのディスカッションアイテムを消去しますか?この操作は元に戻せないことに注意してください。よろしいですか?
 Cancel=キャンセル
-smallCommentBy0On1Small=<small>{0} によるコメント、日時: {1}</small>
+smallCommentBy0On1Small=<small>{1} に関する {0} のコメント:</small>
 VersionHistory1=バージョン履歴
 NoHistory=履歴なし
 View=表示
