--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_ja.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_ja.properties
@@ -21,7 +21,7 @@ FormEditorViewImpl.preview=プレビュー
 FormEditorViewImpl.saveBeforeRename=ファイル名の変更前に現在の変更を保存しますか?保存しない場合には、変更内容が失われます
 
 FormEditorPresenter.unexpectedError=現在のフォームのロード中に予期しないエラーが発生しました。フォームを閉じてから再度開いてください。エラーが解決しない場合は、管理者に連絡して問題がないか確認してください
-FormEditorPresenter.formUsages= フォーム: <B><I>{0}</I></B> は以下のアセットに使われています。削除しますか？
+FormEditorPresenter.formUsages= フォーム: <B><I>{0}</I></B> は以下のアセットに使われています。削除しますか?
 FormEditorPresenter.layoutTitle=新規フォームの作成
 FormEditorPresenter.layoutSubTitle=ここにコンポーネントをドラッグして新規フォームを構築
 FormEditorPresenter.componentsPalette=フォームコントロール
@@ -58,14 +58,14 @@ ChangesNotificationDisplayer.title=通知 - フォームに変更があります
 NewPropertiesDisplayerViewIpml.newFormFieldsAvailable=利用可能な新規フォームフィールド
 
 ConflictsDisplayerViewIpml.conflicts=以下のフィールドは競合しており、解決しなければいけません:
-ModelProperty.removed1=:(''{0}'') にバインドされていたモデルプロパティーは削除されました。
+ModelProperty.removed1=: (''{0}'') にバインドされていたモデルプロパティは削除されました。
 ModelProperty.removed2=フィールドはフォームから削除されませんが、問題を回避するために、バインディングが変更されます。フィールドのプロパティーを編集し、既存のプロパティーにバインドしてください。
-ModelProperty.typeConflict1=:(''{0}'') にバインドされていたモデルプロパティーが、そのタイプをフォームフィールドがサポートしないタイプに変更しました。
+ModelProperty.typeConflict1=: (''{0}'') にバインドされていたモデルプロパティが、そのタイプをフォームフィールドがサポートしないタイプに変更しました。
 ModelProperty.typeConflict2=フォームフィールドは、正しいフィールドタイプに変更されます。フィールドのプロパティーを編集して、設定が正しいことを確認してください。
 
-NestedFormsConflictHandler.nestedForm=:サブフォームフィールドが存在しないフォームを使うように設定されています。
-NestedFormsConflictHandler.creationForm=:マルチサブフォームフィールドが存在しないインスタンス生成フォームを使おうとしています。
-NestedFormsConflictHandler.editionForm=:マルチサブフォームフィールドが存在しないインスタンス編集フォームを使おうとしています。
+NestedFormsConflictHandler.nestedForm=: サブフォームフィールドが存在しないフォームを使うように設定されています。
+NestedFormsConflictHandler.creationForm=: マルチサブフォームフィールドが存在しないインスタンス生成フォームを使おうとしています。
+NestedFormsConflictHandler.editionForm=: マルチサブフォームフィールドが存在しないインスタンス編集フォームを使おうとしています。
 NestedFormsConflictHandler.fix=問題を回避するため、フィールド設定は変更されます。フィールドを編集し、正しいフォームを選択してください。
 
 showMore=詳細の表示
