--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_es.properties
@@ -3,16 +3,16 @@ JBPMFormModelCreationPresenter.InvalidFormModel=No se seleccionó ningún proces
 JBPMFormModelCreationViewImpl.SelectProcess=Seleccione el proceso:
 JBPMFormModelCreationViewImpl.SelectForm=Seleccione el formulario:
 JBPMFormModelCreationViewImpl.StartProcessForm=Formulario de inicio del proceso ({0})
-JBPMFormModelCreationViewImpl.TaskName=Formulario de tareas para '{0}' ({1})
+JBPMFormModelCreationViewImpl.TaskName=Formulario de tareas para ''{0}'' ({1})
 
 org.kie.workbench.common.forms.jbpm.model.authoring.process.BusinessProcessFormModel=Proceso comercial
 org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Tarea
 
-MissingProcess.shortMessage=No puede encontrarse el proceso con ID '{0}' en el proyecto.
-MissingProcess.fullMessage=No puede encontrarse el proceso con ID '{0}' en el proyecto. <br/>En general, esto implica que el proceso se ha eliminado o es defectuoso. Cierre el formulario y compruebe que existe el proceso y vuelva a abrirlo. Si el error persiste, consulte con su administrador o genere el formulario de nuevo. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
+MissingProcess.shortMessage=No puede encontrarse el proceso con ID ''{0}'' en el proyecto.
+MissingProcess.fullMessage=No puede encontrarse el proceso con ID ''{0}'' en el proyecto. <br/>Esto suele indicar que el proceso ha sido eliminado o que está mal formado. Cierre el formulario y compruebe que existe el proceso y vuelva a abrirlo. Si el error persiste, consulte con su administrador o genere de nuevo el formulario. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
 
-MissingTask.shortMessage=No puede encontrarse la tarea con el nombre de tarea '{0}' en el proceso '{1}'.
-MissingTask.fullMessage=No puede encontrarse la tarea con el nombre de tarea '{0}' en el proceso '{1}'. <br/>En general, esto implica que la tarea ha sido eliminada del proceso o que el formulario se generó antes de que el proceso se guardara. <br/>Cierre el formulario y compruebe que la tarea existe en el proceso; guarde el proceso y regenere el formulario. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
+MissingTask.shortMessage=No puede encontrarse la tarea con el nombre de tarea ''{0}'' en el proceso ''{1}''.
+MissingTask.fullMessage=No puede encontrarse la tarea con el nombre de tarea ''{0}'' en el proceso ''{1}''. <br/>Esto suele significar que se ha eliminado la tarea del proceso o que el formulario se ha generado antes de guardar el proceso. <br/>Por favor, cierre el formulario y compruebe que la tarea existe en el proceso, guarde el proceso y vuelva a generar el formulario. <br/>Si el formulario ya no es necesario, elimínelo para evitar posibles problemas.
 
 process=Proceso
 
@@ -30,6 +30,6 @@ DocumentUploadViewImpl.dropFilesHere=Suelte los archivos aquí
 DocumentUploadViewImpl.maxDocuments= Máx: {0} archivos
 DocumentUploadViewImpl.upload=Cargar
 
-DocumentListFieldRenderer.maxContentLengthWarning=Advertencia: El tamaño del contenido que se cargó podría ser demasiado grande ({0}) y causar problemas al transferir el contenido de los documentos.
+DocumentListFieldRenderer.maxContentLengthWarning=El tamaño del contenido que se cargó podría ser demasiado grande ({0}) y causar problemas al transferir el contenido de los documentos.
 
 DocumentListFieldRenderer.maxDocumentsReached=La cantidad de documentos permitida es de {0}.
