--- a/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/src/main/resources/org/kie/workbench/common/screens/contributors/client/resources/i18n/ContributorsConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/src/main/resources/org/kie/workbench/common/screens/contributors/client/resources/i18n/ContributorsConstants_fr.properties
@@ -1,12 +1,12 @@
 contributorsPerspectiveName=Contributeurs
-contributorsDataSetOutdated=L’ensemble de données relatif aux contributeurs a été modifié. Rafraîchissement du tableau de bord…
+contributorsDataSetOutdated=L''ensemble de données relatif aux contributeurs a été modifié. Rafraîchissement du tableau de bord…
 numberOfCommits=Nombre de validations
 numberOfCommitsEvolution=Évolution des validations
 date=Date
-organizationalUnit=Unité d’organisation
+organizationalUnit=Unité d''organisation
 numberOfRepositories=Nombre de référentiels
 numberOfContributors=Nombre de contributeurs
-commitsPerOrganization=Validations par unité d’organisation
+commitsPerOrganization=Validations par unité d''organisation
 years=Années
 quarters=Trimestres
 dayOfWeek=Jour de la semaine
