--- a/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_fr.properties
@@ -24,17 +24,17 @@ DataSourceDefMainPanelViewImpl.emptyOption=Aucun élément sélectionné
 
 DataSourceDefEditor.InvalidNameMessage=Un nom de source de données valide est requis
 DataSourceDefEditor.InvalidConnectionURLMessage=Une URL de connexion valide est requise
-DataSourceDefEditor.InvalidUserMessage=Un nom d’utilisateur valide est requis
+DataSourceDefEditor.InvalidUserMessage=Un nom d''utilisateur valide est requis
 DataSourceDefEditor.InvalidPasswordMessage=Un mot de passe valide est requis
 DataSourceDefEditor.DriverRequiredMessage=Un pilote est requis
-DataSourceDefEditor.AllFieldsRequiresValidation=Tous les champs doivent être validés afin d’enregistrer la définition de source de données
-DataSourceDefEditor.LoadDriversErrorMessage=L’initialisation de l’éditeur a échoué ; il n’a pas été possible de charger les définitions du pilote : {0}
+DataSourceDefEditor.AllFieldsRequiresValidation=Tous les champs doivent être validés afin d''enregistrer la définition de source de données
+DataSourceDefEditor.LoadDriversErrorMessage=L''initialisation de l''éditeur a échoué ; il n''a pas été possible de charger les définitions du pilote : {0}
 DataSourceDefEditor.ConnectionTestSuccessfulMessage=Test de connexion réussi
 DataSourceDefEditor.ConnectionTestFailedMessage=Échec du test de connexion
 
 DataSourceDefEditorViewImpl.browseContent=Parcourir le contenu
 
-DataSourceDefEditor.DataSourceHasBeenReferencedForDeleteMessage=La source de données actuelle a été référencée.<BR>La suppression peut entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même la supprimer ?</B>
+DataSourceDefEditor.DataSourceHasBeenReferencedForDeleteMessage=La source de données actuelle a été référencée. <BR>La suppression peut entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même la supprimer ?</B>
 
 DataSourceDefEditor.DataSourceHasBeenReferencedForSaveMessage=La source de données actuelle a été référencée.<BR>Les modifications peuvent entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même enregistrer les modifications ?</B>
 
@@ -45,8 +45,8 @@ DefEditorActionsPanelViewImpl.deleteAction=Supprimer
 
 NewDataSourceDefWizard.title=Nouvelle source de données
 NewDataSourceDefWizard.DataSourceCreatedMessage=La source des données {0} a été créée
-NewDataSourceDefWizard.DataSourceCreateErrorMessage=La source de données n’a pas été créée en raison de l’erreur suivante : {0}
-NewDataSourceDefWizard.WizardStartErrorMessage=L’initialisation de l’assistant a échoué ; il n’a pas été possible de charger les définitions du pilote : {0}
+NewDataSourceDefWizard.DataSourceCreateErrorMessage=La source de données n''a pas été créée en raison de l''erreur suivante : {0}
+NewDataSourceDefWizard.WizardStartErrorMessage=L''initialisation de l''assistant a échoué ; il n''a pas été possible de charger les définitions du pilote : {0}
 NewDataSourceDefWizard.FileExistsErrorMessage=Le fichier existe déjà : {0}
 
 DataSourceDefPageViewImpl.pageTitle=Informations sur la source de données
@@ -54,22 +54,22 @@ DataSourceDefPageViewImpl.pageTitle=Informations sur la source de données
 DriverDefMainPanelViewImpl.name=Nom
 DriverDefMainPanelViewImpl.driverClass=Nom de classe du pilote
 DriverDefMainPanelViewImpl.groupId=ID de groupe
-DriverDefMainPanelViewImpl.artifactId=ID d’artefact
+DriverDefMainPanelViewImpl.artifactId=ID d''artefact
 DriverDefMainPanelViewImpl.version=Version
 
-DriverDefEditor.CheckStatusMenu=Vérifier l’état
+DriverDefEditor.CheckStatusMenu=Vérifier l''état
 DriverDefEditor.InvalidNameMessage=Un nom de pilote valide est requis
 DriverDefEditor.InvalidDriverClassMessage=Un nom de classe de pilote valide est requis
 DriverDefEditor.InvalidGroupIdMessage=Un ID de groupe valide est requis
-DriverDefEditor.InvalidArtifactIdMessage=Un ID d’artefact valide est requis
+DriverDefEditor.InvalidArtifactIdMessage=Un ID d''artefact valide est requis
 DriverDefEditor.InvalidVersionMessage=Un numéro de version valide est requis
-DriverDefEditor.DriverHasDependantsForSaveMessage=Des instances de source de données qui dépendent de ce pilote ont été trouvées. <BR>Les modifications apportées à ce pilote peuvent lui conférer un état PÉRIMÉ ou incohérent.<BR><BR><B>Voulez-vous quand même enregistrer les modifications ?</B>
+DriverDefEditor.DriverHasDependantsForSaveMessage=Les instances de la source de données qui dépendent de ce pilote ont été trouvées. <BR>Les changements sur ce pilote peuvent les laisser dans un état PÉRIMÉ ou incohérent. <BR><BR><B>Voulez-vous toujours enregistrer les changements ?</B>
 
-DriverDefEditor.DriverHasDependantsForDeleteMessage=Des instances de source de données qui dépendent de ce pilote ont été trouvées. <BR>La suppression de ce pilote peut lui conférer un état PÉRIMÉ ou incohérent.<BR><BR><B>Voulez-vous quand même le supprimer ?</B>
+DriverDefEditor.DriverHasDependantsForDeleteMessage=Les instances de la source de données qui dépendent de ce pilote ont été trouvées. <BR>La suppression de ce pilote peut les laisser dans un statut PÉRIMÉ ou incohérent. <BR><BR><B>Voulez-vous toujours le supprimer ?</B>
 
 NewDriverDefWizard.title=Nouveau pilote
 NewDriverDefWizard.DriverCreatedMessage=Le pilote {0} a été créé
-NewDriverDefWizard.DriverCreateErrorMessage=Le pilote n’a pas été créé en raison de l’erreur suivante : {0}
+NewDriverDefWizard.DriverCreateErrorMessage=Le pilote n''a pas été créé en raison de l''erreur suivante : {0}
 
 DriverDefDefPageViewImpl.pageTitle=Informations sur le pilote
 
@@ -80,10 +80,10 @@ DataSourceDefExplorerScreenViewImpl.projects=Projets
 DataSourceDefExplorerScreenViewImpl.global=Global
 
 DataSourceSelector.Title=Sélecteur de source de données
-DataSourceSelector.NoAvailableDataSourcesMessage=Aucune source de données n’est disponible
+DataSourceSelector.NoAvailableDataSourcesMessage=Aucune source de données n''est disponible
 DataSourceSelector.DataSourceColumn=Source de données
 DataSourceSelector.SelectButton=Sélectionner
-DataSourceSelector.DataSourcesLoadError=Il n’a pas été possible de lire les informations sur les sources de données disponibles
+DataSourceSelector.DataSourcesLoadError=Il n''a pas été possible de lire les informations sur les sources de données disponibles
 
 DatabaseStructureExplorerViewImpl.schemasTitle=Schémas
 DatabaseStructureExplorerViewImpl.dataSourceTitle=Source de données
@@ -98,7 +98,7 @@ DatabaseSchemaExplorerViewImpl.schemaOpenAction=Ouvrir
 DatabaseObjectExplorerViewImpl.loadingDbObjects=Chargement des objets de la base de données
 DatabaseObjectExplorerViewImpl.loadingDbSchemas=Chargement des schémas de la base de données
 DatabaseObjectExplorerViewImpl.schema=Schéma
-DatabaseObjectExplorerViewImpl.dbObjectType=Type d’objet de la base de données
+DatabaseObjectExplorerViewImpl.dbObjectType=Type d''objet de la base de données
 DatabaseObjectExplorerViewImpl.namePattern=Filtre de nom
 DatabaseObjectExplorerViewImpl.namePatternHelp=modèle de nom pour le filtrage
 DatabaseObjectExplorerViewImpl.filter=Filtrer
