--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_fr.properties
@@ -61,25 +61,25 @@ Problems=Problèmes
 FileName=Fichier
 GroupID=ID de groupe
 GroupIdExample=Exemple : com.myorganization.myprojects
-GroupIdMoreInfo=Identificateur unique universel d’un projet. Il est normal d’utiliser un nom de package complet pour le distinguer d’autres projets ayant un nom semblable.
-ArtifactID=ID d’artefact
-ArtifactIDExample=Exemple : MonProjet
-ArtifactIDMoreInfo=Identifiant de cet artefact qui est unique au sein du groupe indiqué par l’ID de groupe. Un artefact est un élément qui est soit produit soit utilisé par un projet. Voici quelques exemples d’artefacts produits par Maven pour un projet : Fichiers JAR, distributions source et binaire, et fichiers WAR.
+GroupIdMoreInfo=Identificateur unique universel d''un projet. Il est normal d''utiliser un nom de package complet pour le distinguer d''autres projets ayant un nom semblable.
+ArtifactID=ID d''artefact
+ArtifactIDExample=Exemple : MonProjet
+ArtifactIDMoreInfo=Identifiant de cet artefact qui est unique au sein du groupe indiqué par l''ID de groupe. Un artefact est un élément qui est soit produit soit utilisé par un projet. Voici quelques exemples d''artefacts produits par Maven pour un projet : JARs, distributions source et binaire, et WARs.
 Version=Version
 VersionExample=1.0.0
-VersionMoreInfo=Version actuelle de l’artefact produit par ce projet.
-MoreInfo=Plus d’informations
+VersionMoreInfo=Version actuelle de l''artefact produit par ce projet.
+MoreInfo=Plus d''informations
 Dependencies=Dépendances
 AddFromRepository=Ajouter à partir du référentiel
 PomDotXmlMetadata=Métadonnées de pom.xml
 KModuleDotXmlMetadata=Métadonnées de kmodule.xml
 newProjectDescription=Projet
 newPackageDescription=Package
-NoRepositorySelectedPleaseSelectARepository=Aucun référentiel n’a été sélectionné. Veuillez sélectionner un référentiel.
+NoRepositorySelectedPleaseSelectARepository=Aucun référentiel n''a été sélectionné. Veuillez sélectionner un référentiel.
 XMLMarkIsNotAllowed=Les balises XML  ">", "<" et "&" ne sont pas autorisées dans GAV
-GroupIdMissing=L’ID de groupe doit contenir une valeur valide
-ArtifactIdMissing=L’ID d’artefact doit contenir une valeur valide
-VersionMissing=L’ID de version doit contenir une valeur valide
+GroupIdMissing=L''ID de groupe doit contenir une valeur valide
+ArtifactIdMissing=L''ID d''artefact doit contenir une valeur valide
+VersionMissing=L''ID de version doit contenir une valeur valide
 ProjectScreen=Écran du projet
 NewProject=Nouveau projet
 PleaseSelectAnItem=Veuillez sélectionner une ressource
@@ -91,7 +91,7 @@ ProjectName=Nom du projet
 ProjectNamePlaceHolder=Insérer un nom de projet…
 ProjectDescription=Description du projet
 ProjectDescriptionPlaceHolder=Insérer une description du projet à des fins de documentation…
-GroupArtifactVersion=Version de l’artefact de groupe
+GroupArtifactVersion=Version de l''artefact de groupe
 Metadata=Métadonnées
 Source=Source
 KnowledgeBaseSettings=Paramètres de la base KIE
@@ -108,43 +108,43 @@ IncludedKnowledgeBases=Bases KIE incluses
 Stateful=Avec état
 Stateless=Sans état
 State=État
-WorkItemHandler=Gestionnaire d’éléments de travail
+WorkItemHandler=Gestionnaire d''éléments de travail
 Default=Par défaut
 Options=Options
 ConsoleLogger=Journal de console
 FileLogger=Journal de fichiers
 Interval=Intervalle
-WorkingMemoryEventListener=Écouteur d’événements d’exécution de la règle
-AgendaEventListener=Écouteur d’événements de l’agenda
-ProcessEventListener=Écouteur d’événements de processus
+WorkingMemoryEventListener=Écouteur d''événements d''exécution de la règle
+AgendaEventListener=Écouteur d''événements de l''agenda
+ProcessEventListener=Écouteur d''événements de processus
 Kind=Genre
 Type=Type
 Close=Fermer
 Listeners=Écouteurs
-WorkItemHandlers=Gestionnaires d’éléments de travail
-InvalidPackageName=Le nom de package "{0}" n’est pas un identifiant valide.
+WorkItemHandlers=Gestionnaires d''éléments de travail
+InvalidPackageName=Le nom de package "{0}" n''est pas un identifiant valide.
 KnowledgeSessions=Sessions KIE
 ThereAlreadyExistAnItemWithTheGivenNamePleaseSelectAnotherName=Il existe déjà un élément portant le nom indiqué. Veuillez choisir un autre nom.
 ProjectScreenWithName=Projet : [{0}]
 RefreshProblemsPanel=Rafraîchir
 Refreshing=Rafraîchissement…
 ABuildIsAlreadyRunning=Une compilation est déjà en cours
-XsdIDError=Le nom doit commencer par une lettre ou un trait de soulignement et ne peut pas contenir de caractères autres que des lettres, des chiffres, des traits de soulignement, des traits d’union et des points.
+XsdIDError=Le nom doit commencer par une lettre ou un trait de soulignement et ne peut pas contenir de caractères autres que des lettres, des chiffres, des traits de soulignement, des traits d''union et des points.
 NoDependencies=Aucune dépendance définie.
-EnterAGroupID=Saisir l’ID de groupe…
-EnterAnArtifactID=Saisir l’ID d’artefact…
+EnterAGroupID=Saisir l''ID de groupe…
+EnterAnArtifactID=Saisir l''ID d''artefact…
 EnterAVersion=Saisir la version…
 ExceptionPackageAlreadyExists0=Le package "{0}" existe déjà.
 ProjectStructure=Structure du projet
-InheritedFromAParentPOM=Hérité d’un POM parent
+InheritedFromAParentPOM=Hérité d''un POM parent
 BuildProcessStarted=Le processus de construction a commencé
-ContainerId=ID de l’unité de déploiement
-ContainerAlias=Alias de l’unité de déploiement
+ContainerId=ID de l''unité de déploiement
+ContainerAlias=Alias de l''unité de déploiement
 ServerTemplate=Configuration de serveur
 FieldMandatory0=Le champ {0} est obligatoire
 DeploymentDescriptor=Descripteur de déploiement
 Deployments=Déploiements
-NoProjectSelected=Aucun projet n’a été sélectionné.
+NoProjectSelected=Aucun projet n''a été sélectionné.
 SearchDependencies=Rechercher
 AllPackagesIncluded=Tous les packages sont inclus
 PackagesNotIncluded=Packages non inclus
@@ -152,22 +152,22 @@ WhiteList=Liste blanche des packages
 SomePackagesIncluded=Certains packages sont inclus
 Repositories=Référentiels
 RepositoriesValidation=Validation
-RepositoriesValidationExplanationL1=Ces référentiels Maven sont utilisés pour vérifier l’unicité de la valeur GAV d’un projet lors (1) de la création d’un projet ou module, (2) de l’installation ou du déploiement d’un projet dans un référentiel Maven.
+RepositoriesValidationExplanationL1=Ces référentiels Maven sont utilisés pour vérifier l''unicité de la valeur GAV d''un projet lors (1) de la création d''un projet ou module, (2) de l''installation ou du déploiement d''un projet dans un référentiel Maven.
 RepositoriesValidationExplanationL2=Ils sont obtenus à partir du fichier POM du projet, de la configuration de gestion de la distribution du projet et des paramètres globaux de Maven.
 RepositoryInclude=Inclure
 Select=Sélectionner
 DependencyIsMissingAVersion=Il manque une version dans la dépendance
-DependencyIsMissingAnArtifactId=Il manque un ID d’artefact dans la dépendance
+DependencyIsMissingAnArtifactId=Il manque un ID d''artefact dans la dépendance
 DependencyIsMissingAGroupId=Il manque un ID de groupe dans la dépendance
 Dependency=Dépendance
 DeploySuccessful=Le déploiement sur la configuration du serveur a été effectué correctement
-StartContainer=Démarrer l’unité de déploiement ?
-NoServersAvailableForProvisioning=Provisioning impossible car aucun serveur actif n’est disponible
+StartContainer=Démarrer l''unité de déploiement ?
+NoServersAvailableForProvisioning=Provisioning impossible car aucun serveur actif n''est disponible
 ContainerIdAlreadyInUse=Ce nom de conteneur est déjà utilisé. Veuillez en choisir un autre.
 ProjectPreferences=Préférences du projet
 DeployFailed=Le déploiement sur la configuration du serveur a échoué.
 DeploymentSkippedDueToNoServerTemplateConfiguredForMode=Le déploiement a été ignoré. Impossible de trouver un serveur fonctionnant en mode ''{0}''.
-DeploymentSkippedCannotUpdateDeploymentsOnProduction=Le déploiement a été ignoré. La mise à jour de déploiements sur des serveurs fonctionnant en mode ''production'' n’est pas autorisée.
+DeploymentSkippedCannotUpdateDeploymentsOnProduction=Le déploiement a été ignoré. La mise à jour de déploiements sur des serveurs fonctionnant en mode ''production'' n''est pas autorisée.
 DeploySuccessfulButContainerFailedToStart=Le déploiement sur la configuration du serveur a réussi, mais le démarrage du conteneur a échoué.
 DeploySuccessfulAndContainerStarted=Le déploiement sur la configuration du serveur a réussi et le conteneur a démarré correctement.
 DeploySuccessfulAndContainerUpdated=Le déploiement sur la configuration du serveur a réussi et le conteneur a été mis à jour correctement.
