--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_fr.properties
@@ -25,8 +25,8 @@ ClientRuntimeStrategy.PerProcessInstance=Par instance de processus
 ClientRuntimeStrategy.PerCase=Par dossier
 ContainerProcessConfigView.Cancel=Annuler
 ContainerProcessConfigView.Save=Enregistrer
-ContainerProcessConfigView.SaveErrorMessage=La mise à jour de l’unité de déploiement a échoué.
-ContainerProcessConfigView.SaveSuccessMessage=L’unité de déploiement a été mise à jour.
+ContainerProcessConfigView.SaveErrorMessage=La mise à jour de l''unité de déploiement a échoué.
+ContainerProcessConfigView.SaveSuccessMessage=L''unité de déploiement a été mise à jour.
 ContainerRulesConfigView.IntervalTextBoxDataOriginalTitle=L''unité de temps est la seconde
 ContainerRulesConfigView.IntervalTextBoxPlaceholder=Intervalle
 ContainerRulesConfigView.Milliseconds=Millisecondes
@@ -36,56 +36,56 @@ ContainerRulesConfigView.Hours=Heures
 ContainerRulesConfigView.Days=Jours
 ContainerRulesConfigView.Scanner=Scanner
 ContainerRulesConfigView.ScanNow=Analyser maintenant
-ContainerRulesConfigView.ScanNowErrorMessage=L’analyse immédiate a échoué.
+ContainerRulesConfigView.ScanNowErrorMessage=L''analyse immédiate a échoué.
 ContainerRulesConfigView.StartScanner=Démarrer le scanner
 ContainerRulesConfigView.StartScannerErrorMessage=Le démarrage du scanner a échoué.
 ContainerRulesConfigView.StopScanner=Arrêter le scanner
-ContainerRulesConfigView.StopScannerErrorMessage=L’arrêt du scanner a échoué.
+ContainerRulesConfigView.StopScannerErrorMessage=L''arrêt du scanner a échoué.
 ContainerRulesConfigView.Upgrade=Mettre à niveau
-ContainerRulesConfigView.UpgradeContainerMessage=La mise à niveau d’une unité de déploiement avec des processus actifs entraînera des erreurs (pour préserver l’intégrité, le processus ne peut pas être mis à niveau automatiquement).
+ContainerRulesConfigView.UpgradeContainerMessage=La mise à niveau d''une unité de déploiement avec des processus actifs entraînera des erreurs (pour préserver l''intégrité, le processus ne peut pas être mis à niveau automatiquement).
 ContainerRulesConfigView.UpgradeErrorMessage=La mise à niveau a échoué.
 ContainerRulesConfigView.UpgradeSuccessMessage=Unité de déploiement mise à niveau vers la version suivante : {0}
 ContainerRulesConfigView.Version=Version
 ContainerRulesConfigView.VersionTextBoxPlaceholder=Version
-ContainerStatusEmptyView.ContainerNotInUseMessage=Cette unité de déploiement n’est actuellement utilisée par aucun serveur distant.
+ContainerStatusEmptyView.ContainerNotInUseMessage=Cette unité de déploiement n''est actuellement utilisée par aucun serveur distant.
 ContainerStatusEmptyView.Documentation=documentation
 ContainerStatusEmptyView.LearnMoreMessage=Pour en apprendre davantage à ce sujet, consultez
 ContainerStatusEmptyView.NoRemoteServers=Aucun serveur à distance
 ContainerStatusEmptyView.Refresh=Rafraîchir
-ContainerView.Alias=Alias d’unité de déploiement
-ContainerView.ArtifactId=ID d’artefact
-ContainerView.ConfirmRemovePopupMessage=Voulez-vous vraiment supprimer l’unité de déploiement actuelle ?
-ContainerView.ConfirmRemovePopupTitle=Supprimer l’unité de déploiement
+ContainerView.Alias=Alias d''unité de déploiement
+ContainerView.ArtifactId=ID d''artefact
+ContainerView.ConfirmRemovePopupMessage=Voulez-vous vraiment supprimer l''unité de déploiement actuelle ?
+ContainerView.ConfirmRemovePopupTitle=Supprimer l''unité de déploiement
 ContainerView.GroupId=ID de groupe :
 ContainerView.ProcessConfig=Configuration du processus
 ContainerView.Refresh=Rafraîchir
 ContainerView.Remove=Supprimer
-ContainerView.RemoveContainerErrorMessage=La suppression de l’unité de déploiement a échoué.
+ContainerView.RemoveContainerErrorMessage=La suppression de l''unité de déploiement a échoué.
 ContainerView.RemoveContainerSuccessMessage=Unité de déploiement supprimée.
 ContainerView.Start=Démarrer
-ContainerView.StartContainerErrorMessage=Le démarrage de l’unité de déploiement a échoué.
+ContainerView.StartContainerErrorMessage=Le démarrage de l''unité de déploiement a échoué.
 ContainerView.Status=État
 ContainerView.Stop=Arrêter
-ContainerView.StopContainerErrorMessage=L’arrêt de l’unité de déploiement a échoué.
+ContainerView.StopContainerErrorMessage=L''arrêt de l''unité de déploiement a échoué.
 ContainerView.VersionConfig=Configuration de la version
 ContainerView.ActivateButton=Activer
 ContainerView.DectivateButton=Désactiver
 CopyPopupView.CopyServerTemplatePopupTitle=Copier la configuration du serveur
 CopyPopupView.TemplateNameEmptyMessage=Le nom doit être renseigné
 CopyPopupView.TemplateNameLabelText=Nom de la configuration
-InfoTitleView.ArtifactId=ID d’artefact
+InfoTitleView.ArtifactId=ID d''artefact
 InfoTitleView.GroupId=ID de groupe :
-NewContainerFormView.ArtifactId=ID d’artefact
+NewContainerFormView.ArtifactId=ID d''artefact
 NewContainerFormView.GroupName=Nom du groupe
 NewContainerFormView.InvalidErrorMessage=Nom incorrect.
 NewContainerFormView.Name=Nom
 NewContainerFormView.Alias=Alias (facultatif)
 NewContainerFormView.NewContainerWizardSaveError=Erreur de la nouvelle unité de déploiement.
-NewContainerFormView.NewContainerWizardSaveSuccess=L’unité de déploiement a été créée.
+NewContainerFormView.NewContainerWizardSaveSuccess=L''unité de déploiement a été créée.
 NewContainerFormView.NewContainerWizardTitle=Nouvelle unité de déploiement
 NewContainerFormView.TitleText=Unité de déploiement
 NewContainerFormView.Version=Version
-NewContainerFormView.StartContainerText=Démarrer l’unité de déploiement ?
+NewContainerFormView.StartContainerText=Démarrer l''unité de déploiement ?
 NewContainerFormView.ProductionModeSupportsDoesntSnapshots=Les serveurs fonctionnant en mode PRODUCTION ne permettent pas de déployer des artefacts SNAPSHOT.
 NewTemplateView.Capabilities=Fonctionnalités :
 NewTemplateView.InvalidErrorMessage=Nom incorrect.
@@ -105,12 +105,12 @@ ProcessConfigView.container-config-ksession-name-textbox-placeholder=Nom de la s
 ProcessConfigView.KieBaseName=Nom de la base KIE
 ProcessConfigView.KieSessionName=Nom de la session KIE
 ProcessConfigView.MergeMode=Mode de fusion (descripteur de déploiement)
-ProcessConfigView.RuntimeStrategy=Stratégie d’exécution
+ProcessConfigView.RuntimeStrategy=Stratégie d''exécution
 RemoteEmptyView.NoAssociatedContainers=Aucun conteneur associé
-RemoteEmptyView.NoAssociatedContainersMessage=Aucune unité de déploiement n’est associée à ce serveur distant. Vous pouvez créer des unités de déploiement sur ce serveur en les ajoutant à la configuration de serveur correspondante.
+RemoteEmptyView.NoAssociatedContainersMessage=Aucune unité de déploiement n''est associée à ce serveur distant. Vous pouvez créer des unités de déploiement sur ce serveur en les ajoutant à la configuration de serveur correspondante.
 RemoteView.Refresh=Rafraîchir
 RemoteView.RemoteInstanceRemoveSuccess=Instance distante supprimée.
-RemoteView.RemoteInstanceRemoveError=La suppression de l’instance distante a échoué.
+RemoteView.RemoteInstanceRemoveError=La suppression de l''instance distante a échoué.
 RemoteView.Remove=Supprimer
 ServerContainerEmptyView.AddContainer=Ajouter une unité de déploiement
 ServerContainerEmptyView.AddKieContainer=ajouter une unité de déploiement
@@ -119,7 +119,7 @@ ServerContainerEmptyView.LearnMoreMessage=Pour en apprendre davantage à ce suje
 ServerContainerEmptyView.NoAssociatedContainersMessage=Cette configuration ne comprend actuellement aucune unité de déploiement. Pour commencer,
 ServerEmptyView.Documentation=documentation
 ServerEmptyView.GetStartedMessage=Pour commencer, vous devez créer un
-ServerEmptyView.GetStartedWithExecutionServers=Prise en main des serveurs d’exécution
+ServerEmptyView.GetStartedWithExecutionServers=Prise en main des serveurs d''exécution
 ServerEmptyView.LearnMoreMessage=Pour en apprendre davantage à ce sujet, consultez
 ServerEmptyView.NewServerTemplate=Nouvelle configuration de serveur
 ServerEmptyView.NewServerTemplateMessage=nouvelle configuration de serveur
@@ -138,13 +138,20 @@ ServerTemplateView.RemoveTemplateErrorMessage=Erreur lors de la tentative de sup
 ServerTemplateView.RuleCheckBoxText=Décision
 ServerTemplateView.TemplateRemovePopupText=Voulez-vous vraiment supprimer la configuration actuelle ?
 ServerTemplateView.TemplateRemovePopupTitle=Supprimer la configuration
-ClientContainerRuntimeOperation.StartContainer=Démarrer l’unité de déploiement
-ClientContainerRuntimeOperation.StopContainer=Arrêter l’unité de déploiement
-ClientContainerRuntimeOperation.UpgradeContainer=Mettre à niveau l’unité de déploiement
+ClientContainerRuntimeOperation.StartContainer=Démarrer l''unité de déploiement
+ClientContainerRuntimeOperation.StopContainer=Arrêter l''unité de déploiement
+ClientContainerRuntimeOperation.UpgradeContainer=Mettre à niveau l''unité de déploiement
 ClientContainerRuntimeOperation.Scan=Analyser
 ClientContainerRuntimeOperation.StartScanner=Démarrer le scanner
 ClientContainerRuntimeOperation.StopScanner=Arrêter le scanner
-ContainerUpdateEvent.ErrorMessage=L’opération ''{0}'' a échoué dans {1} instance(s) de serveur.
-ContainerUpdateEvent.WarnMessage=L’opération ''{0}'' a peut-être échoué dans certaines des {1} instances de serveur.
-ContainerUpdateEvent.SuccessMessage=L’opération ''{0}'' a réussi ; {1} instance(s) de serveur ont été affectées.
+ContainerUpdateEvent.ErrorMessage=L''opération ''{0}'' a échoué dans {1} instance(s) de serveur.
+ContainerUpdateEvent.WarnMessage=L''opération ''{0}'' a peut-être échoué dans certaines des {1} instances de serveur.
+ContainerUpdateEvent.SuccessMessage=L''opération ''{0}'' a réussi ; {1} instance(s) de serveur ont été affectées.
+NewContainer.GAVNotExist=GAV ''{0}'' non trouvé dans le dépôt Maven.
+NewContainer.GAVNotExist.Save=GAV ''{0}'' non trouvé dans le dépôt Maven. Vous êtes sûr de vouloir le déployer ? 
+NewContainer.Save=OK
+NewContainer.SaveContainerSpec=Save Container Spec
+NewContainer.Deploying={0} se déploie
+NewContainer.FailedContainer=Le conteneur a échoué sur le serveur Kie.
+CanNot_Stop_Container=Il n''est pas possible d''arrêter le conteneur en raison de l''instance de processus en cours.
 
