--- a/kie-wb-common-services/kie-wb-common-refactoring/kie-wb-common-refactoring-client/src/main/resources/org/kie/workbench/common/services/refactoring/client/resources/i18n/RefactoringConstants_fr.properties
+++ b/kie-wb-common-services/kie-wb-common-refactoring/kie-wb-common-refactoring-client/src/main/resources/org/kie/workbench/common/services/refactoring/client/resources/i18n/RefactoringConstants_fr.properties
@@ -1,8 +1,8 @@
 ShowAssetUsagesDisplayerViewViewImpl.title=Notification des utilisations
-ShowAssetUsagesDisplayerViewViewImpl.assetUsages=L’actif <B><I>{0}</I></B> est utilisé dans les actifs suivants :
-ShowAssetUsagesDisplayerViewViewImpl.partUsages:La partie de l’actif <B><I>{0}</I></B> est utilisée dans l’actif suivant :
+ShowAssetUsagesDisplayerViewViewImpl.assetUsages=La ressource <B><I>{0}</I></B> est utilisée dans les ressources suivantes :
+ShowAssetUsagesDisplayerViewViewImpl.partUsages:Partie de la ressource <B><I>{0}</I></B>  est utilisée dans la ressource suivante:
 ShowAssetUsagesDisplayerViewViewImpl.name=Nom
-ShowAssetUsagesDisplayerViewViewImpl.path=Chemin d’accès
-ShowAssetUsagesDisplayerViewViewImpl.assetType=Type d’actif
+ShowAssetUsagesDisplayerViewViewImpl.path=Chemin d''accès
+ShowAssetUsagesDisplayerViewViewImpl.assetType=Type d''actif
 ShowAssetUsagesDisplayerViewViewImpl.proceed=Continuer
 ShowAssetUsagesDisplayerViewViewImpl.cancel=Annuler
