--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-project/kie-wb-common-stunner-project-client/src/main/resources/org/kie/workbench/common/stunner/project/client/resources/i18n/StunnerProjectClientConstants_fr.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-project/kie-wb-common-stunner-project-client/src/main/resources/org/kie/workbench/common/stunner/project/client/resources/i18n/StunnerProjectClientConstants_fr.properties
@@ -15,11 +15,11 @@
 #
 
 org.kie.workbench.common.stunner.project.client.editor.DownloadDiagram=Télécharger le diagramme
-org.kie.workbench.common.stunner.project.client.editor.ConfirmAction=Confirmer l’action
-org.kie.workbench.common.stunner.project.client.editor.OnErrorConfirmUndoLastAction=Une erreur s’est produite [{0}]. Voulez-vous annuler la dernière action ?
+org.kie.workbench.common.stunner.project.client.editor.ConfirmAction=Confirmer l''action
+org.kie.workbench.common.stunner.project.client.editor.OnErrorConfirmUndoLastAction=Une erreur s''est produite [{0}]. Voulez-vous annuler la dernière action ?
 org.kie.workbench.common.stunner.project.client.editor.DiagramSaveSuccessful=Le diagramme a été enregistré
 org.kie.workbench.common.stunner.project.client.editor.DiagramEditorDefaultTitle=Éditeur de diagramme du projet
-org.kie.workbench.common.stunner.project.client.editor.DiagramParsingError=Une erreur s’est produite lors de l’analyse du diagramme de processus. Il se peut que certains nœuds bpm ne soient pas encore pris en charge par la version actuelle de Process Designer ou que le contenu XML comporte des erreurs. Vous pouvez essayer d’ouvrir le fichier avec l’ancienne version de Process Designer ou le réparer manuellement. {0}
+org.kie.workbench.common.stunner.project.client.editor.DiagramParsingError=Une erreur s''est produite lors de l''analyse du diagramme de processus. Il se peut que certains nœuds bpm ne soient pas encore pris en charge par la version actuelle de Process Designer ou que le contenu XML comporte des erreurs. Vous pouvez essayer d''ouvrir le fichier avec l''ancienne version de Process Designer ou le réparer manuellement. {0}
 org.kie.workbench.common.stunner.project.client.editor.Print=Imprimer
 
 
