--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_es.properties
@@ -16,4 +16,7 @@ editor.actions.migrateErrorProcessAlreadyExists=Ya existe un proceso del diseña
 editor.actions.migrateErrorGeneric=Se produjo un error durante la migración
 
 editor.error.generateSvgFileError=Se produjo un error durante la generación del archivo svg del diagrama
+editor.error.subprocessNotFound=Subproceso {0} no encontrado.
+editor.error.subprocessNotSpecified=No se ha especificado el ID del subproceso.
+editor.toolbox.openSubprocessToolboxAction=Subproceso abierto
 
