--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_fr.properties
@@ -26,7 +26,7 @@ AShortDescriptionOfTheSubjectMatter=Brève description de la matière.
 TypeMetaData=Type
 TypeTip=Cela est réalisé à des fins de classification.
 ExternalLinkMetaData=Lien externe
-ExternalLinkTip=Cela a pour but de relier l’actif à un système externe.
+ExternalLinkTip=Cela a pour but de relier l''actif à un système externe.
 SourceMetaData=Source
 SourceMetaDataTip=Brève description ou code indiquant la source de la règle.
 VersionHistory=Historique des versions
@@ -35,7 +35,7 @@ PleaseWait=Veuillez patienter…
 Refresh=Rafraîchir
 NewItem=Nouvel élément
 Trash=Corbeille
-RuleDocHint=Il s’agit d’une documentation sur les règles. Descriptions de la logique métier compréhensibles par un humain.
+RuleDocHint=Il s''agit d''une documentation sur les règles. Descriptions de la logique métier compréhensibles par un humain.
 Description=Description
 documentationDefault=<documentation>
 Discussion=Discussion
@@ -43,7 +43,7 @@ AddADiscussionComment=Ajouter un commentaire de discussion
 EraseAllComments=Effacer tous les commentaires
 EraseAllCommentsWarning=Effacer TOUS les éléments de la discussion ? NOTEZ que cette action est irréversible. En êtes-vous sûr ?
 Cancel=Annuler
-smallCommentBy0On1Small=<small>Commentaire de {0} le {1} :</small>
+smallCommentBy0On1Small=<small>Commentaire de {0} sur  {1}:</small>
 VersionHistory1=Historique des versions
 NoHistory=Aucun historique.
 View=Afficher
@@ -55,12 +55,12 @@ LockMetaData=État du verrouillage
 LockedByHint=Verrouillé par
 LockedByHintOwned=Verrouillé par vous
 UnlockedHint=Non verrouillé
-ForceUnlockCaption=Forcer le déverrouillage de l’actif
+ForceUnlockCaption=Forcer le déverrouillage de l''actif
 TagsMetaData=Balises
 AddNewTag=Ajouter une (des) nouvelle(s) balise(s)
 RemoveThisTag=Supprimer cette balise
 ForceUnlockConfirmationTitle=Confirmation
 ForceUnlockConfirmationText=Voulez-vous vraiment déverrouiller cet actif ? Cela pourrait entraîner la perte des modifications non enregistrées dans {0} !
 ByAOnB=Par {0} le {1}
-NoDescription=Il n’y a pas encore de description. À quoi sert cet actif ?
+NoDescription=Il n''y a pas encore de description. À quoi sert cet actif ?
 
